<resources>
    <string name="app_name">NeoFlickr</string>
    <string name="info">Сведения</string>
    <string name="owner">Владелец</string>
    <string name="date">Дата</string>
    <string name="sizes">Размеры (ш х в)</string>
    <string name="title">Заголовок</string>
    <string name="description">Описание</string>
    <string name="settings">Настройки</string>
    <string name="show">Показывать:</string>
    <string name="popular">Популярное</string>
    <string name="forUser">Для пользователя (ник)</string>
    <string name="gallery">Галерея</string>
    <string name="link">Сссылка</string>
    <string name="search">Поиск</string>
    <string name="clear_thumbs">Очистить кэш миниатюр</string>
    <string name="about_access_storage">Доступ к памяти нужен для того, чтобы фото сохранялись в галереи.</string>
    <string name="retry">Повторить</string>
    <string name="no_connection">Нет подключения к интернету</string>
    <string name="gallery_is_empty">Галерея пуста</string>
</resources>